2009-06-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Refactor so brk hints is prepared only once per brk_maximal_do() call.

	* src/thbrk/brk-maximal.c (brk_maximal_do, +brk_maximal_do_impl):
	Split implementation code into _impl() function, and let the
	original brk_maximal_do() be a wrapper doing necessary preparations.

	* src/thbrk/brk-maximal.c (brk_recover):
	Call brk_maximal_do_impl() instead of brk_maximal_do(), passing the
	appropriate brk hints subarray to it.

	* src/thbrk/brk-maximal.{c,h} (brk_maximal_do):
	* src/thbrk/thbrk.c (th_brk):
	Drop the do_recover arg from brk_maximal_do(), as it's now a wrapper
	which can seed initial condition for the mutual recursion.

	* src/thbrk/brk-maximal.c (th_brkpos_hints): Add prototype.

2009-06-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (th_isleadable -> th_brkpos_hints):
	  - Turn simple leadable check into a pre-processed break position
	    hinting. Instead of doing the complicated checks on every loop,
	    now the clients just check the prepared boolean array.
	  - Add more complicated cases, such as Thai composite vowels.

	* src/thbrk/brk-maximal.c (brk_recover):
	  - Change prototype to accept brk pos hints, so it doesn't need to be
	    recalculated.
	  - Drop additional checks of preceeding ldvowel, as it's already
	    covered by the brk pos hints.

	* src/thbrk/brk-maximal.c (brk_maximal_do):
	  - Pre-calculate brk pos hints on entry, and free it on exit.
	  - Check the hints instead of calling the obsolete th_isleadable().
	  - Pass the hints to brk_recover().

2009-06-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{ict,proper,common,science,geo}.txt: Add words.

2009-05-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{std-compound,common}.txt: Remove some loose compounds.
	* data/tdict-common.txt: Reorder some words.
	* data/tdict-{ict,proper,common,science,geo}.txt: Add words.
