@@ -1,5 +1,15 @@
 2009-06-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	Fix wrong case of syllable like 'ช็อก'.
+
+	* src/thbrk/brk-maximal.c (th_brkpos_hints):
+	  - The case of SARA E/AE with next third character as MAITAIKHU should
+	    not apply when the MAITAIKHU is followed by O ANG or WO WAEN.
+	    That's a signature of new syllable, such as 'ช็อก'.
+	  - Add the case of syllable like 'ช็อก' or 'ช็วก'.
+
+2009-06-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	Refactor so brk hints is prepared only once per brk_maximal_do() call.
 
 	* src/thbrk/brk-maximal.c (brk_maximal_do, +brk_maximal_do_impl):
